--- a/projects/sample/src/app/app.component.html
+++ b/projects/sample/src/app/app.component.html
@@ -3,8 +3,8 @@
 
   <div class="toolbar-spacer"></div>
 
-  <a mat-button [routerLink]="['profile']">Profile</a>
-  <a mat-button [routerLink]="['profile']" target="blank">Profile new tab</a>
+  <a mat-button [routerLink]="['apicall']">Call secured API</a>
+  <a mat-button [routerLink]="['apicall']" target="blank">Call secured API on new tab</a>
   <a mat-button [routerLink]="['testredirect']">Test redirect</a>
 
   <button mat-raised-button *ngIf="!loggedIn" (click)="login()">Login</button>
