Added support for cancelling profile edit

--- a/projects/sample/src/app/home/home.component.html
+++ b/projects/sample/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <p class="welcome">Welcome to the MSALB2C-Angular Quickstart!</p>
 <p>This sample demonstrates how to configure MSALB2C-Angular to login, logout, protect a route, and acquire an access token for a protected resource.</p>
+<button *ngIf="loggedIn" (click)="editProfile()">Edit Profile</button>
